# calculator_turing_c_1_1

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/calculator/: calculator.py
src/calculator_turing_c_1_1/: calculator.py
tests/: test_calculator.py
