[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "calculator_turing_c_1_1"
version = "1.0.2"
authors = [
    { name = "Paulius P", email = "paulius@fastmail.org" },
]
description = "A simple calculator module"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]


[project.urls]
"Homepage" = "https://github.com/qwyt/calculator_turing_c_1_1"

[tool.setuptools]
package-dir = { "" = "src" }
